pkg/controllers/ingress/ingressPathWithTlsSecret.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-readiness
  namespace: default
spec:
  tls:
    - hosts:
        - foo.bar.com
      secretName: tls-secret
  rules:
    - host: "foo.bar.com"
      http:
        paths:
          - pathType: Exact
            path: "/testecho1"
            backend:
              service:
                name: testecho1
                port:
                  number: 80
